syntax = "proto3";

package shared;

// gogo plugin toggles
option (gogoproto.gogoproto_import) = true;
option (gogoproto.goproto_registration) = true;
option (gogoproto.marshaler_all) = true;
option (gogoproto.messagename_all) = true;
option (gogoproto.sizer_all) = true;
option (gogoproto.unmarshaler_all) = true;
// golang option
option go_package = "shared";
// java options
option java_multiple_files = true;
option java_outer_classname = "SharedProto";
option java_package = "io.btfs.shared";

import "github.com/tron-us/protobuf/gogoproto/gogo.proto";
import "google/protobuf/timestamp.proto";

service RuntimeService {
  rpc CheckRuntime(SignedRuntimeInfoRequest) returns (RuntimeInfoReport);
}

message RuntimeInfoRequest {
  bytes request_address = 1;
  google.protobuf.Timestamp curent_time = 2 [
    (gogoproto.nullable) = false,
    (gogoproto.stdtime) = true
  ];
}

message SignedRuntimeInfoRequest {
  RuntimeInfoRequest req = 1;
  bytes signature = 2;
}

message RuntimeInfoReport {
  string peer_id = 1;
  string address = 2;
  string service_name = 3;
  enum HealthStatus {
    SICK = 0;
    RUNNING = 1;
    BOOTSTRAP = 2; //reserve
    PARTIAL_STOP = 3; //reserve field, some function cannot work
  }
  HealthStatus status = 4; //current status , running, starting, partial stop
  google.protobuf.Timestamp curent_time = 5 [
    (gogoproto.nullable) = false,
    (gogoproto.stdtime) = true
  ];
  google.protobuf.Timestamp start_time = 6 [
    (gogoproto.nullable) = false,
    (gogoproto.stdtime) = true
  ];
  string git_hash = 7; //the git hash of the build related the git repository's branch
  string version = 8;
  map<string, string> db_status_extra = 9; //RESERVED: JSON format structure to store db status information
  string rd_status_extra = 10; //RESERVED: JSON format structure to store redis status information
  string queue_status_extra = 11; //RESERVED: JSON format structure to store the queue information
  string chain_status_extra = 12; //RESERVED: JSON format structre to store the block chain related information
  string cache_status_extra = 13; //RESERVED: JSON format structre to store the cache related information
  string extra = 14; //RESERVED: JSON format structre to store other information
}
